# mood-mixer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: sample-library.json
src/moodmixer/: __init__.py  cli.py  features.py  models.py  moods.py  server.py  spotify.py  store.py
tests/: conftest.py  test_features.py  test_moods.py  test_server_imports.py  test_server_tools.py
