[project]
name = "mood-mixer"
version = "0.1.0"
description = "Mood-based Spotify playlist creator — builds playlists from your liked library using community-sourced audio features (Spotify's audio-features API is deprecated)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Megan Schott" }]
dependencies = ["mcp>=1.0", "requests>=2.28"]

[project.optional-dependencies]
# `pip install -e ".[test]"` to run the suite.
test = ["pytest>=8.0"]

[project.scripts]
# After `pip install -e .` you can launch the server as `mood-mixer`
# (no PYTHONPATH needed) — handy for the Claude Desktop config.
mood-mixer = "moodmixer.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moodmixer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), isort (I), bugbear (B), pyupgrade (UP)
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length is enforced by the formatter, not the linter
